# mllam-exps

./: .gitignore  create_datastore_config.py  dvc.yaml  notes.md  params.yaml  pyproject.toml  queue_experiments.py  queue_experiments.sh  train_wrapper.py
data/: .gitignore  base_datastore.yaml  training_params.yaml
machines/: environment.sh  slurm.mllam-data-prep.sh  slurm.train.sh
