[project]
name = "mllam-exps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bokeh>=3.6.3",
    "dask[distributed]>=2025.1.0",
    "ipython>=8.32.0",
    "mllam-data-prep",
    "neural-lam",
    "zarrdump>=0.4.2",
]

[[tool.uv.index]]
url = "https://nexus.gefion.dcai.dk/repository/pypi/simple/"

[tool.uv.sources]
neural-lam = { path = "~/git-repos/mllam/neural-lam" }
mllam-data-prep = { path = "~/git-repos/mllam/mllam-data-prep" }
